Example vue app from create-vue command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     image: cocktail-db-frontend-img
+    ports:
+      - '5173:5173'
     volumes:
       - .:/home/node/app
