--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
 .idea
 node_modules
+
+# Auto-created by `create-vue` command >>>
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+# Editor directories and files
+# TODO
+.vscode/*
+!.vscode/extensions.json
+
+*.tsbuildinfo
+# <<< Auto-created by `create-vue` command
