--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: Dockerfile
     image: cocktail-db-frontend-img
     ports:
-      - '5173:5173'
+      - '5173:5173' # npm run dev
+      - '4173:4173' # npm run preview
     volumes:
       - .:/home/node/app
